@@ -18,12 +18,14 @@ import vazkii.psi.common.lib.LibMisc;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Stream;
 
-@EventBusSubscriber(modid = LibMisc.MOD_ID, bus = EventBusSubscriber.Bus.GAME)
+@EventBusSubscriber(modid = LibMisc.MOD_ID)
 public final class ContributorSpellCircleHandler {
 
 	private static volatile Map<String, int[]> colormap = Collections.emptyMap();
@@ -37,7 +39,7 @@ public final class ContributorSpellCircleHandler {
 				int[] values = Stream.of(value.split(",")).mapToInt(el -> Integer.parseInt(el.substring(2), 16)).toArray();
 				m.put(key, values);
 			} catch (NumberFormatException | StringIndexOutOfBoundsException e) {
-				Psi.logger.error("Contributor " + key + " has an invalid hexcode!");
+				Psi.logger.error("Contributor {} has an invalid hexcode!", key);
 			}
 		}
 		colormap = m;
@@ -70,14 +72,14 @@ public final class ContributorSpellCircleHandler {
 		public ThreadContributorListLoader() {
 			setName("Psi Contributor Spell Circle Loader Thread");
 			setDaemon(true);
-			setUncaughtExceptionHandler((thread, err) -> Psi.logger.error("Caught off-thread exception from " + thread.getName() + ": ", err));
+			setUncaughtExceptionHandler((thread, err) -> Psi.logger.error("Caught off-thread exception from {}: ", thread.getName(), err));
 			start();
 		}
 
 		@Override
 		public void run() {
 			try {
-				URL url = new URL("https://raw.githubusercontent.com/VazkiiMods/Psi/master/contributors.properties");
+				URL url = new URI("https://raw.githubusercontent.com/VazkiiMods/Psi/master/contributors.properties").toURL();
 				Properties props = new Properties();
 				try (InputStreamReader reader = new InputStreamReader(url.openStream(), StandardCharsets.UTF_8)) {
 					props.load(reader);
@@ -85,6 +87,8 @@ public final class ContributorSpellCircleHandler {
 				}
 			} catch (IOException e) {
 				Psi.logger.info("Could not load contributors list. Either you're offline or github is down. Nothing to worry about, carry on~");
+			} catch (URISyntaxException e) {
+				throw new RuntimeException(e);
 			}
 		}
 	}
